# octo-slample

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conf.py  index.rst  pyproject.toml
.github/workflows/: docker-image.yml
banks/: empty_sample_bank.json
banks/invalid/: no_samples.json
octo_slample/: __init__.py  bank_exporter.py  bank_initializer.py  channel.py  cli.py  clock.py  constants.py  directory.py  exception.py  json.py  json_pattern_bank.py  looping_sampler.py  pattern.py  sampler.py  wav_writer.py
octo_slample/bank/: __init__.py  sample_bank.py
octo_slample/pattern/: __init__.py  json_pattern.py  json_pattern_bank.py  pattern.py  text_pattern.py
octo_slample/sampler/: __init__.py  channel.py  json_sample_bank.py  looping_sampler.py  sample_bank.py  sampler.py
octo_slample/util/: __init__.py
patterns/: organic_house.pattern.json  pattern_bank.json  pattern_bank_no_header.json  tinlicker.voodoo.pattern.json
patterns/invalid/: no_name.json
patterns/invalid_patterns/: no_name.json  no_pattern.json  no_samples.json
tests/: __init__.py  pattern.txt  pattern2.txt
tests/fixtures/patterns/: organic_house.pattern.json  pattern.json  pattern_no_header.json  tinlicker.voodoo.pattern.json
tests/fixtures/patterns/invalid/: no_name.json
tests/fixtures/sample_banks/: sample_bank.json  tinlicker.voodoo.bank.json
tests/fixtures/sample_banks/invalid/: no_name.json
tests/octo_slample/: fixtures.py  test_bank_exporter.py  test_bank_initializer.py  test_channel.py  test_cli.py  test_clock.py  test_directory.py  test_json.py  test_json_pattern_bank.py  test_pattern.py  test_wav_writer.py
tests/octo_slample/bank/: test_sample_bank.py
tests/octo_slample/pattern/: test_json_pattern.py  test_pattern.py  test_text_pattern.py
tests/octo_slample/sampler/: test_channel.py  test_json_sample_bank.py  test_looping_sampler.py  test_sample_bank.py  test_sampler.py
