[tool.poetry]
name = "octo-slample"
version = "1.0.0"
description = "Sample manager for the ALM Squid Salmple Eurorack Module"
authors = ["Pete Baker <peteb4ker@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "octo_slample"}]

[tool.poetry.dependencies]
python = "^3.11"
pydub = "^0.25.1"
simpleaudio = "^1.0.4"
ffmpeg = "^1.4"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
docformatter = "^1.5.1"
black = "^23.1.0"
flake8-pyproject = "^1.2.2"
pre-commit = "^3.0.3"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
